--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                 <h4>2021</h4>
                                 <h4 class="subheading">Making Peace</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">I have come to ters with the inability to physically be near other people so instead I take up solitary behaviors and activities such as hiking in the mountains.</p></div>
+                            <div class="timeline-body"><p class="text-muted">I have come to terms with the inability to physically be near other people so instead I take up solitary behaviors and activities such as hiking in the mountains.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
